data/derived/comb/progs/unify/prog3574.ml.out
Characters 72-74:
  | (f', b') -> if b' then wwhile (f, f')
                                      ^^
Error: This expression has type 'a but an expression was expected of type
         'a * bool
       The type variable 'a occurs inside 'a * bool
